fixed overflow-x hidden

--- a/src/app/components/overview-page/overview/overview.component.scss
+++ b/src/app/components/overview-page/overview/overview.component.scss
@@ -3,7 +3,8 @@
 
 .overview-body {
   background-color: $aqua;
-  @include padding(30px, 0, 30px, 30px);
+  overflow-x: hidden;
+  @include padding(30px, 30px, 30px, 30px);
 
   .overview-content {
     display: flex;
